apps/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: lscr.io/linuxserver/code-server:latest  # Docker image for code-server
          ports:
            - containerPort: 8443  # Port inside the container (code-server default is 8443)
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 8443
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 8443
          #   periodSeconds: 10
          command: ["/bin/sh", "-c", "./startup.sh && code-server"]
          volumeMounts:
            - name: startup-script
              mountPath: /config/startup.sh
              subPath: startup.sh
      volumes:
        - name: startup-script
          configMap:
            name: startup-script
      restartPolicy: Always  # Restart policy for the pod
